--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,23 @@
   float: right;
   clear: both;
 }
+
+.questionList{
+  margin-left: 20px;
+  margin-right: 20px;
+  padding:0;
+  list-style-type:none;
+}
+
+.questionText{
+  text-align: center;
+}
+
+.questionBtn{
+  display:inline-block;
+  float: none;
+  padding-right: 10px;
+}
+.buttonText{
+  font-size: 20px;
+}
