--- a/src/messages/BotMessage.css
+++ b/src/messages/BotMessage.css
@@ -11,6 +11,14 @@
     height:50px;
 }
 
+.translatecontent{
+  background-color: lightgray;
+  word-wrap: break-word;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
 .row{
   
 }
