--- a/src/messages/UserMessage.css
+++ b/src/messages/UserMessage.css
@@ -6,7 +6,7 @@
 }
 
 .userimage{
-    background-color: pink;
+    /* background-color: pink; */
     height:50px;
 }
 /*
@@ -14,3 +14,10 @@
   justify-content: flex-end;
 }
 */
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
